--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:HaidraSuleiman.github.io/fast-react-pizza",
+  "homepage": "/fast-react-pizza",
   "name": "fast-react-pizza",
   "private": true,
   "version": "0.0.0",
